--- a/public/css/registration_number.css
+++ b/public/css/registration_number.css
@@ -5,3 +5,15 @@ body {
     background-size: cover;
     background-attachment: fixed;   
 }
+
+li {
+    width: 100px;
+    border: 2px solid black;
+    border-radius: 2em;
+    padding: 1px;
+    margin: 1px;
+    background-color: yellow;
+    text-align: center;
+    float:left;
+    
+  }
