--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -63,6 +63,10 @@
           <input type="radio" id="customRadioInline" name="town" class="custom-control-input" value="CJ">
           <label class="custom-control-label" for="customRadioInline">Parrow</label>
         </div>
+        <div class="custom-control custom-radio custom-control-inline">
+          <input type="radio" id="customRadioInline4" name="town" class="custom-control-input" value="">
+          <label class="custom-control-label" for="customRadioInline4">all</label>
+        </div>
       </div>
     </div>
 
