fixed the filter

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -64,7 +64,7 @@
           <label class="custom-control-label" for="customRadioInline">Parrow</label>
         </div>
         <div class="custom-control custom-radio custom-control-inline">
-          <input type="radio" id="customRadioInline4" name="town" class="custom-control-input" value="">
+          <input type="radio" id="customRadioInline4" name="town" class="custom-control-input" value="all">
           <label class="custom-control-label" for="customRadioInline4">all</label>
         </div>
       </div>
