--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -27,7 +27,7 @@
                     <span class="input-group-text" id="addon-wrapping">@</span>
                   </div>
                   <input type="text" class="form-control" placeholder="reg-number" aria-label="Username"
-                    aria-describedby="basic-addon1" name="plate" value=""
+                    aria-describedby="basic-addon1" name="plate" value="" maxlength="10"
                     onkeyup=" this.value=this.value.toUpperCase();">
                 </div>
               </div>
