--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -66,7 +66,7 @@
         </div>
         <div class="custom-control custom-radio custom-control-inline">
           <input type="radio" id="customRadioInline4" name="town" class="custom-control-input" value="all">
-          <label class="custom-control-label" for="customRadioInline4">all</label>
+          <label class="custom-control-label" for="customRadioInline4">All</label>
         </div>
       </div>
     </div>
