renamed a radio button

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -62,7 +62,7 @@
         </div>
         <div class="custom-control custom-radio custom-control-inline">
           <input type="radio" id="customRadioInline" name="town" class="custom-control-input" value="CJ">
-          <label class="custom-control-label" for="customRadioInline">Parrow</label>
+          <label class="custom-control-label" for="customRadioInline">Paarl</label>
         </div>
         <div class="custom-control custom-radio custom-control-inline">
           <input type="radio" id="customRadioInline4" name="town" class="custom-control-input" value="all">
